# TEST

./: CMakeLists.txt
.cache/clangd/index/: ssdl.cpp.AB9E5D85E578B271.idx  ssdl.cpp.D5AE179A69672D78.idx
src/: defines.h  food.cpp  food.h  game.cpp  game.h  main.cpp  snake.cpp  snake.h  ssdl.cpp
